# tunnel_detector

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
algorithms/: genetic.py  partial_enum.py
cli/: main.py
data_io/: generator.py  io.py
experiments/: runner.py
geometry/: primitives.py
results/experiments/: exp_dimension_1750684587.csv  exp_dimension_1750699264.csv  exp_population_1750682837.csv  exp_population_1750684587.csv  exp_population_1750699264.csv  exp_stop_k_1750682837.csv  exp_stop_k_1750684587.csv  exp_stop_k_1750699264.csv
results/individual/: solution_1750126781.csv  solution_1750157404.csv  solution_1750684424.csv
tests/: test_genetic.py  test_geometry.py  test_partial_enum.py
